--- a/Dev-Blog/BlazorServer/_Imports.razor
+++ b/Dev-Blog/BlazorServer/_Imports.razor
@@ -15,3 +15,6 @@
 @using Blazored.Modal
 @using Blazored.Modal.Services
 @using BlazorServer.State
+@using BlazorServer.Pages.Modals
+@using Radzen
+@using Radzen.Blazor
