--- a/Dev-Blog/BlazorServer/Pages/Index.razor
+++ b/Dev-Blog/BlazorServer/Pages/Index.razor
@@ -19,11 +19,9 @@ else
 <!-- YOUTUBE LINK -->
 <section youtube>
     @*<iframe src="#"></iframe>*@
-    <h2>
-        YouTube Channel
-        <br /><br />
-        Coming Soon
-    </h2>
+    <h2>YouTube Channel</h2>
+    <h2>Comming Soon</h2>
+
 </section>
 
 <!-- SUGGESTION BOX -->
