--- a/Dev-Blog/BlazorServer/Pages/Posts.razor.css
+++ b/Dev-Blog/BlazorServer/Pages/Posts.razor.css
@@ -1,6 +1,9 @@
 ﻿/* entire post */
 div[post] {
     margin-top: 50px;
+    border-radius: 3px;
+    background-color: #414141;
+    padding-bottom: 20px;
 }
 
 /* post info */
@@ -11,24 +14,38 @@ img {
     width: 928px;
 }
 
-section[postInfo] > span:nth-child(2) {
-    float: right;
+section[postInfo] > div {
+    background-color: #626262;
+    padding: 5px;
+    margin-bottom: 15px;
+}
+
+    section[postInfo] > div span:last-child {
+        float: right;
+    }
+
+section[postInfo] button {
+    color: white;
+}
+
+section[postInfo] > div button:hover {
+    color: red;
+    cursor: pointer;
 }
 
 section[postInfo] p {
     text-align: center;
-}
-
-section[postInfo] {
+    width: 928px;
     margin: auto;
-    width: 80%;
-    border: 2px solid red;
+    background-color: #626262;
+    padding: 10px 0px;
 }
 
 /* Voting */
 button[thumbIcon],
 span[thumbIcon] {
     fill: grey;
+    margin-top: 10px;
 }
 
 /* comments */
@@ -37,26 +54,57 @@ div[comments] {
     width: 85%;
 }
 
+section[comment] {
+    border: 1px solid grey;
+    margin: 12px 0px;
+    background-color: #313131;
+}
+
 ::deep textarea {
     display: block;
+    background-color: #313131;
+    color: white;
     width: 100%;
 }
 
-section[comment] {
-    border: 1px solid grey;
-    margin: 5px 0px;
+section[comment] > span {
+    position: relative;
+    top: -8px;
+    left: 10px;
+    padding: -0px 5px;
+    background-image: linear-gradient(#414141 50%, #313131 50%);
 }
 
-    section[comment] div {
-        float: right;
+section[comment] div {
+    float: right;
+}
+
+section[comment] p {
+    padding: 7.5px;
+}
+
+/* comment delete button */
+section[comment] button {
+    position: relative;
+    color: white;
+    top: 3px;
+}
+
+    section[comment] button:hover {
+        color: red;
+        cursor: pointer;
     }
 
-    section[comment] p {
-        padding: 7.5px;
-    }
-
+/* add comment */
 section[addComment] button {
     border: 1px solid grey;
     padding: 5px;
     margin-top: 5px;
+    color: white;
+    background-color: #626262;
 }
+
+    section[addComment] button:hover {
+        cursor: pointer;
+        opacity: 80%;
+    }
