--- a/Dev-Blog/BlazorServer/Pages/Posts.razor.css
+++ b/Dev-Blog/BlazorServer/Pages/Posts.razor.css
@@ -36,7 +36,7 @@ section[postInfo] button {
 }
 
 section[postInfo] > div button:hover {
-    color: red;
+    color: indianred;
     cursor: pointer;
 }
 
@@ -103,6 +103,7 @@ section[comment] div {
 
 section[comment] p {
     padding: 7.5px;
+    margin-top: 5px;
 }
 
 /* comment delete button */
@@ -113,7 +114,7 @@ section[comment] button {
 }
 
     section[comment] button:hover {
-        color: red;
+        color: indianred;
         cursor: pointer;
     }
 
