--- a/Dev-Blog/BlazorServer/Pages/Modals/Register.razor
+++ b/Dev-Blog/BlazorServer/Pages/Modals/Register.razor
@@ -17,7 +17,7 @@
             <input type="hidden" name="confirmpassword" value=@registerVM.ConfirmPassword hidden />
             <input type="hidden" name="email" value=@registerVM.Email hidden />
 
-            <input modal type="submit" value="Submit" />
+            <input type="submit" value="Submit" />
         </form>
     </EditForm>
 </section >
