--- a/Dev-Blog/BlazorServer/Shared/NavMenu.razor
+++ b/Dev-Blog/BlazorServer/Shared/NavMenu.razor
@@ -6,10 +6,8 @@
     <img src="/Imgs/Logo.png" height="115" width="100" />
 
     <!-- PAGE LINKS -->
-    <section>
-        <span>
-            <NavLink href="/"> The Dev Blog </NavLink>
-        </span>
+    <section navlinks>
+        <NavLink href="/"> The Dev Blog </NavLink>
         <NavLink href="/"> Home </NavLink>
         <NavLink href="/Posts"> Status </NavLink>
         <NavLink href="/About"> About </NavLink>
@@ -19,16 +17,12 @@
         <AuthorizeView>
             <Authorized>
                 <!-- WELCOME USER -->
-                <NavLink>
-                    <a>Welcome @_http.HttpContext.User.Identity.Name</a>
-                </NavLink>
+                <span>Welcome @_http.HttpContext.User.Identity.Name</span>
 
                 <!-- LOGOUT -->
-                <NavLink>
-                    <form signout method="post" action="/signout">
-                        <input type="submit" value="sign out" />
-                    </form>
-                </NavLink>
+                <form signout method="post" action="/signout">
+                    <input type="submit" value="sign out" />
+                </form>
             </Authorized>
 
 
@@ -36,7 +30,7 @@
             <NotAuthorized>
                 <button @onclick="@(() => _modal.Show<SignIn>("Login"))">
                     Login
-                </button>
+                </button>               
                 <button @onclick="@(() => _modal.Show<Register>("Sign Up"))">
                     SignUp
                 </button>
@@ -44,3 +38,4 @@
         </AuthorizeView>
     </section>
 </nav>
+
