--- a/Dev-Blog/BlazorServer/Shared/Footer.razor.css
+++ b/Dev-Blog/BlazorServer/Shared/Footer.razor.css
@@ -4,7 +4,17 @@
     height: 50px;
     margin-top: 50px;
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
-    color: #C1C1C1;
 }
+
+span,
+button {
+    color: #C1C1C1;
+    margin: 10px;
+}
+
+    button:hover {
+        cursor: pointer;
+        color: indianred;
+    }
